2003-01-12  Dave Morrison <dmrrsn@users.sourceforge.net>

	* many files: updated copyright notices to include 2003

2003-01-05  Justin F. Hallett <thesin@users.sourceforge.net>

        * fink.in:  Added description for purge option in show_help

2002-12-23  Dave Morrison <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, postinstall.pl.in: Simplify the symlink to point
	from %p/fink/dists to 10.1 or 10.2 (suggested by Ben Hines)

	* shlibs.default.in: Update to latest format for Shlibs field
	

2002-12-23  Dave Morrison <dmrrsn@users.sourceforge.net>

	Create a CVS branch "isystem" to isolate the proposed changes in 
	default values for environment variables from the main CVS branch.

2002-12-22  Dave Morrison <dmrrsn@users.sourceforge.net>

	* fink.info.in, inject.pl: The postinstall script should not be
	explicitly executed as sudo (it is already executed sudo) 
	Bug # 652349.

2002-12-19  Ben Hines <bhines@alumni.ucsd.edu>

	* bootstrap.pl, postinstall.pl.in: Recognize Mac OS X 10.2.3.

2002-12-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.11.1

2002-11-18  Max Horn  <max@quendi.de>

	* bootstrap.pl, postinstall.pl.in: Recognize Mac OS X 10.2.2.

	* fink.in: Patch #608920: Add --keep-root-dir and --keep-build-dir.

2002-11-05  Max Horn  <max@quendi.de>

	* bootstrap.pl: Fix a bootstrapping problem that occured if the path leading
	  to bootstrap.pl contained spaces.

2002-10-20  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.11.0

2002-10-12 Dave Morrison <dmrrsn@users.sourceforge.net>

	* shlibs.default.in: new file to provide defaults for shlibs system

	* setup.sh: create the shlibs.default file from shlibs.default.in

	* install.sh: create $basepath/etc/dpkg and install shlibs.default there

	* inject.pl: include the new shlibs.default.in in the tarball

	* bootstrap.pl: include new shlibs.default.in during bootstrap

2002-10-10 Dave Morrison <dmrrsn@users.sourceforge.net>
