@@ -1,3 +1,10 @@
+2003-01-13  Finlay Dobbie <finlay@users.sourceforge.net>
+
+	* Package.pm: Added support for partial db updates.
+	
+	* PkgVersion.pm (merge): Added warning to if we try to merge a 
+	non-dummy package.
+	
 2003-01-12  Dave Morrison <dmrrsn@users.sourceforge.net>
 
 	* all files: updated copyright notice to include 2003
