@@ -1,3 +1,8 @@
+2003-01-13  Finlay Dobbie <finlayd@users.sourceforge.net>
+
+	* postinstall.pl.in: Fixed formatting, cleaned up, make sure package
+	index is rebuilt.
+	
 2003-01-12  Dave Morrison <dmrrsn@users.sourceforge.net>
 
 	* many files: updated copyright notices to include 2003
